# e220_tinyusb

./: CMakeLists.txt  e220.c  e220.h  hid_test.py  main.c  radio.c  radio.h  tusb_config.h  usb-descriptors.c  usb_command.c  usb_command.h
scripts/: hid_set_uart.py  hid_test.py
